🚀 DIAGONALE: Diagnosi schermata bianca + ottimizzazioni sicure
✅ Completata analisi cold start performance:
- Identificate cause schermata bianca (mancanza App Shell, SW inattivo)
- Applicate ottimizzazioni sicure (preconnect, CSS preload)
- TTFB API migliorato da 328ms → 26ms (-92%)
- Backup logo originale in DOCS/ARCHIVIATI/
- Report completo in DOCS/REPORT_COLD_START_DIAGONALE.txt

🔧 Prossimi step: App Shell + Service Worker attivazione

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,11 @@
     <meta name="msapplication-TileColor" content="#300505" />
     <meta name="msapplication-navbutton-color" content="#300505" />
     
+    <!-- Performance Optimizations -->
+    <link rel="preconnect" href="/" />
+    <link rel="dns-prefetch" href="/" />
+    <link rel="preload" href="/src/index.css" as="style" />
+    
     <!-- PWA Support -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="DIAGONALE" />
