fix: correct PWA icon references in HTML and service worker

--- a/client/index.html
+++ b/client/index.html
@@ -23,11 +23,11 @@
     
     <!-- Mobile Status Bar -->
     <meta name="format-detection" content="telephone=no" />
-    <link rel="apple-touch-icon" href="/pwa-icon-1753573265.png?v=10" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/pwa-icon-1753573265.png?v=10" />
-    <link rel="icon" type="image/png" sizes="96x96" href="/pwa-icon-1753573265.png?v=10" />
-    <link rel="icon" type="image/png" sizes="144x144" href="/pwa-icon-1753573265.png?v=10" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/pwa-icon-1753573265.png?v=10" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=10" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192x192.png?v=10" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/icon-96x96.png?v=10" />
+    <link rel="icon" type="image/png" sizes="144x144" href="/icon-144x144.png?v=10" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/icon-512x512.png?v=10" />
   </head>
   <body>
     <div id="root"></div>
